changed Ordering of included pages on portfolio to be based on front matter instead of being random.

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Contact
+portfolio_order: 80
 ---
 
 <div class="contact-list">
@@ -16,3 +17,5 @@ title: Contact
   {% endfor %}
   
 </div>
+
+
