Moved portfolio to seperate page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,12 @@
 ---
-title: Blake Curry
+title: portfolio
 ---
 
 <!DOCTYPE html>
 <html>
 
+  {% include head.html %}
 
-<head>
-    <meta http-equiv="refresh" content="0; url={{site.baseurl}}/portfolio.html" />
-  </head>
-  
 
   <body>
     
