--- a/ddep/1/index.html
+++ b/ddep/1/index.html
@@ -1,5 +1,8 @@
 ---
 ---
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+</head>
 <body>
     <div id='TableApp'></div>
     <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
